# real-time-cpp

./: .clang-tidy  .gitattributes  .gitignore  C++  CMakeLists.txt  LICENSE_1_0.txt  Real Time CPP  lgtm.yml  readme.md  readme.txt  real time  sonar-project.properties
chapter02_03/: CMakeLists.txt  build.bat  chapter02_03.atsln  chapter02_03.cppproj  chapter02_03.vcxproj  chapter02_03.vcxproj.filters  chapter02_03_vs2012.sln  target.vcxproj  target.vcxproj.filters
chapter02_03/src/mcal/: mcal.cpp  mcal.h  mcal_reg_access_template.h  mcal_reg_dynamic_access_template.h
chapter02_03/src/mcal/avr/: mcal_cpu.cpp  mcal_cpu.h  mcal_gpt.cpp  mcal_gpt.h  mcal_irq.h  mcal_led.cpp  mcal_led.h  mcal_port.cpp  mcal_port.h  mcal_reg.h  mcal_reg_access.h  mcal_wdg.h
chapter02_03/src/mcal/win32/: mcal_gpt.cpp  mcal_gpt.h  mcal_irq.h  mcal_led.cpp  mcal_led.h  mcal_port.h  mcal_reg.h  mcal_reg_access.h
chapter02_03/src/sys/start/: sys_start.cpp
chapter02_03/src/util/STL/: algorithm  cmath  cstdbool  functional  initializer_list  limits  utility
chapter02_03/src/util/STL_C++11_Compatibility/: chrono  cstdint  ratio  type_traits
chapter02_03/src/util/STL_C++17_Compatibility/: cstdfloat
chapter02_03/src/util/memory/: util_ring_allocator.h
chapter02_03/src/util/utility/: util_bit_mask.h  util_circular_buffer.h  util_language.h  util_linear_interpolate.h  util_noncopyable.h  util_nothing.h  util_point.h  util_time.h  util_type.h
examples/chapter02_02/: CMakeLists.txt  avr.ld  build.bat  build.sh  chapter02_02.atsln  chapter02_02.vcxproj  chapter02_02.vcxproj.filters  crt0.s  cstdint  led.cpp  mcal_reg.h  readme.md
ref_app/: CMakeLists.txt  build_commands.txt  cpp_board.vcxproj  cpp_board.vcxproj.filters  cpp_board_vs2010.sln  cpp_board_vs2010.vcxproj  cpp_board_vs2010.vcxproj.filters  cpp_board_vs2012.sln  cpp_board_vs2012.vcxproj  cpp_board_vs2012.vcxproj.filters  ref_app.atsln  ref_app.cppproj  ref_app.sln  ref_app.vcxproj  ref_app.vcxproj.filters  ref_app_cb1211.cbp  ref_app_vs2012.sln  ref_app_vs2012.vcxproj  ref_app_vs2012.vcxproj.filters  ref_app_vs2013.sln  ref_app_vs2013.vcxproj  ref_app_vs2013.vcxproj.filters  target.vcxproj  target.vcxproj.filters  target_vs2010.vcxproj  target_vs2010.vcxproj.filters  target_vs2012.vcxproj  target_vs2012.vcxproj.filters  target_vs2013.vcxproj  target_vs2013.vcxproj.filters
ref_app/_test/: test.7z  test_md5.7z  test_md5.cpp  test_sha1.cpp
ref_app/cmake/: am335x.cmake  atmega2560.cmake  avr.cmake  bcm2835_raspi_b.cmake  gcc-toolchain.cmake  host.cmake  lpc11c24.cmake  nxp_imxrt1062.cmake  pic32mx795fx.cmake  r7fa4m1ab.cmake  riscvfe310.cmake  rl78.cmake  rpi_pico2_rp2350.cmake  rpi_pico_rp2040.cmake  rx63n.cmake  stm32f100.cmake  stm32f407.cmake  stm32f429.cmake  stm32f446.cmake  stm32h7a3.cmake  stm32l100c.cmake  stm32l152.cmake  stm32l432.cmake  xtensa32.cmake
ref_app/lib/: readme.txt
ref_app/src/app/benchmark/: app_benchmark.cpp  app_benchmark.h  app_benchmark_boost_crypt_hasher.cpp  app_benchmark_boost_math_cbrt.cpp  app_benchmark_boost_math_cbrt_tgamma.cpp  app_benchmark_boost_math_cyl_bessel_j.cpp  app_benchmark_boost_multiprecision_cbrt.cpp  app_benchmark_boost_multiprecision_sqrt.cpp  app_benchmark_cnl_scaled_integer.cpp  app_benchmark_complex.cpp  app_benchmark_cpu.cpp  app_benchmark_crc.cpp  app_benchmark_detail.h  app_benchmark_dsp.cpp  app_benchmark_ecc_generic_ecc.cpp  app_benchmark_fast_math.cpp  app_benchmark_filter.cpp  app_benchmark_fixed_point.cpp  app_benchmark_float.cpp  app_benchmark_fpu.cpp  app_benchmark_fpu_bessel.h  app_benchmark_fpu_hypergeometric.h  app_benchmark_fpu_legendre.h  app_benchmark_hash.cpp  app_benchmark_hash_sha256.cpp  app_benchmark_non_std_decimal.cpp  app_benchmark_none.cpp  app_benchmark_pi_agm.cpp  app_benchmark_pi_agm.docx  app_benchmark_pi_spigot.cpp  app_benchmark_pi_spigot_single.cpp  app_benchmark_soft_double_h2f1.cpp  app_benchmark_std_big_int.cpp  app_benchmark_std_big_int_.cpp  app_benchmark_trapezoid_integral.cpp  app_benchmark_wide_decimal.cpp  app_benchmark_wide_integer.cpp  readme.md
ref_app/src/app/com/: app_com.cpp
ref_app/src/app/led/: app_led.cpp  app_led_runtime_measure.cpp  app_runtime_measure.cpp  blink.cpp  ctags_target_for_gcc_minus_e.cpp
ref_app/src/mcal/: mcal.cpp  mcal.h  mcal_cpu_progmem_array.h  mcal_cpu_progmem_iterator.h  mcal_cpu_read_program_memory.cpp  mcal_cpu_read_program_memory.h  mcal_display_pixel.h  mcal_gcc_cxx_completion.cpp  mcal_gcc_cxx_completion_with_stdlib.cpp  mcal_gpt_arm_sys_tick.h  mcal_helper.h  mcal_led.h  mcal_pwm_template.h  mcal_reg_access_dynamic.h  mcal_reg_access_static.h  mcal_reg_access_template.h  mcal_reg_dynamic_access_template.h
ref_app/src/mcal_lcd/: mcal_lcd_base.h  mcal_lcd_buffered_instance.h  mcal_lcd_console.h  mcal_lcd_generic_device.h  mcal_lcd_generic_st7066.h  mcal_lcd_serlcd_sparkfun.h  mcal_lcd_st7066u_newhaven_0216k1z.h
ref_app/src/mcal_led/: mcal_led_base.h  mcal_led_boolean_state_base.h  mcal_led_console.h  mcal_led_dummy.h  mcal_led_port.h  mcal_led_port_inverted.h  mcal_led_pwm.h  mcal_led_rgb_base.h
ref_app/src/mcal_memory/: mcal_memory_address_ptr.h  mcal_memory_const_address_ptr.h  mcal_memory_nonconst_address_ptr.h  mcal_memory_progmem_access.h  mcal_memory_progmem_array.h  mcal_memory_progmem_iterator.h  mcal_memory_progmem_ptr.h  mcal_memory_progmem_ref.h  mcal_memory_sram_array.h  mcal_memory_sram_generic_host.h  mcal_memory_sram_generic_spi.h  mcal_memory_sram_ptr.h  mcal_memory_sram_ref.h  mcal_memory_sram_types.h  mcal_memroy_sram_iterator.h
ref_app/src/mcal_pwm/: mcal_pwm_base.h  mcal_pwm_console.h  mcal_pwm_dummy.h
ref_app/src/mcal_spi/: mcal_spi_software_dummy.h  mcal_spi_software_port_driver.h
ref_app/src/mcal_vfd/: mcal_vfd_base.h  mcal_vfd_nec_fm20x2kb.h  mcal_vfd_vacuum_fluorescent_display_base.h  mcal_vfd_vacuum_fluorescent_display_nec_fm20x2kb.h
ref_app/src/os/: os.cpp  os.h  os_cfg.h  os_debug_monitor_cfg.h  os_detail.cpp  os_detail.h  os_task_control_block.cpp  os_task_control_block.h
ref_app/x64/target am335x/: target.vcxprojAssemblyReference.cache
(+3456 files in other folders)
